@@ -1,3 +1,8 @@
+2019-10-25  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92222
+	* gcc.dg/torture/pr92222.c: New testcase.
+
 2019-10-25  Richard Sandiford  <richard.sandiford@arm.com>
 
 	* gcc.target/aarch64/sve/reduc_strict_3.c (double_reduc1): Prevent
